<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.dev.nutclass.view.TitleBar
        xmlns:attr="http://schemas.android.com/apk/res/com.dev.nutclass"
        android:id="@+id/tb_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_titlebar"
        attr:left_type="1"
        attr:middle_text="@string/text_titlebar_addtag"
        attr:right_type1="4" />

    <RelativeLayout
        android:id="@+id/rl_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main_activity_pink"
        android:orientation="vertical" >

        <com.dev.nutclass.view.SquareImageView
            android:id="@+id/iv_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside" />

        <LinearLayout
            android:id="@+id/ll_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_69"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_10"
                android:src="@drawable/selector_add_tag_add_tag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tag_text_part"
                android:textColor="@color/color_10"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_69"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_10"
                android:src="@drawable/selector_add_tag_add_hospital" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tag_text_hospital"
                android:textColor="@color/color_10"
                android:textSize="@dimen/font_12" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_90"
            android:textSize="@dimen/font_14"
            android:gravity="center"
            android:text="@string/add_tag_text_tip"
             />
    </RelativeLayout>

</LinearLayout>